# celestial-mechanics-desktop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CelestialMechanics.sln  README.md  UPDATE.md  compile_output.txt  fresh_desktop_build.txt  fresh_restore_diag.txt  imgui.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
engine/: CMakeLists.txt
engine/docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  DETERMINISM.md  PIPELINE.md
engine/include/celestial/core/: constants.hpp  error.hpp  platform.hpp  types.hpp
engine/include/celestial/cuda/: cuda_check.hpp  device_context.hpp  device_particles.hpp  gpu_reduction.hpp  gpu_tree.hpp  kernel_config.hpp  morton.hpp  pinned_buffer.hpp
engine/include/celestial/hooks/: phase13_hooks.hpp
engine/include/celestial/interop/: native_api.h
engine/include/celestial/job/: job.hpp  job_queue.hpp  job_system.hpp  job_types.hpp
engine/include/celestial/math/: mat4d.hpp  quaterniond.hpp  vec3d.hpp
engine/include/celestial/memory/: gpu_pool.hpp
engine/include/celestial/physics/: barnes_hut_solver.hpp  collision_detector.hpp  collision_resolver.hpp  density_model.hpp  octree_builder.hpp  octree_node.hpp  octree_pool.hpp  particle_system.hpp  post_newtonian.hpp
engine/include/celestial/profile/: benchmark.hpp  energy_tracker.hpp  frame_profiler.hpp  gpu_metrics.hpp  memory_tracker.hpp  nsight_markers.hpp
engine/include/celestial/sim/: adaptive_timestep.hpp  async_pipeline.hpp  config_serializer.hpp  deterministic.hpp  engine.hpp  simulation_config.hpp  timestep.hpp  yoshida.hpp
engine/src/core/: error.cpp
engine/src/cuda/: async_pipeline.cu  blackhole_kernel.cu  collision_kernel.cu  compact_kernel.cu  device_context.cu  device_particles.cu  gpu_reduction.cu  gpu_tree.cu  gravity_kernel.cu  integration_kernel.cu  morton_kernel.cu  potential_energy_kernel.cu  reduction_kernel.cu  resolve_merges_kernel.cu  supernova_kernel.cu
engine/src/interop/: native_api.cpp
engine/src/job/: job_queue.cpp  job_system.cpp
engine/src/memory/: gpu_pool.cu
engine/src/physics/: barnes_hut_solver.cpp  collision_detector.cpp  collision_resolver.cpp  density_model.cpp  octree_builder.cpp  octree_pool.cpp  particle_system.cpp  post_newtonian.cpp
engine/src/profile/: benchmark.cpp  energy_tracker.cpp  frame_profiler.cpp  memory_tracker.cpp
engine/src/sim/: adaptive_timestep.cpp  config_serializer.cpp  deterministic.cpp  engine.cpp  timestep.cpp
engine/tests/: CMakeLists.txt  test_engine.cpp  test_gravity.cpp  test_job_system.cpp  test_octree.cpp  test_phase13.cpp  test_phase14_15.cpp  test_phase16_17.cpp  test_phase18_19.cpp  test_timestep.cpp  test_validation.cpp  test_vec3d.cpp
src/CelestialMechanics.App/: Application.cs  ApplicationMode.cs  CelestialMechanics.App.csproj  ImGuiOverlay.cs  InputHandler.cs  Program.cs  RuntimeDiagnostics.cs  SelectionContext.cs  imgui.ini
src/CelestialMechanics.AppCore/: CelestialMechanics.AppCore.csproj
src/CelestialMechanics.AppCore/Modes/: IAppMode.cs  ModeManager.cs  ObservationMode.cs  (+1 more)
src/CelestialMechanics.Data/: CelestialAddMenuCatalog.cs  CelestialCatalog.cs  GravityStrengthMap.cs  ObjectTemplates.cs  ObservationCatalog.cs
src/CelestialMechanics.Desktop/: App.xaml  App.xaml.cs  CelestialMechanics.Desktop.csproj  app.manifest  nuget.config  packages.lock.json
src/CelestialMechanics.Math/: Mat4d.cs  PhysicalConstants.cs  Quaterniond.cs  UnitConversion.cs  Vec3d.cs
src/CelestialMechanics.Physics/: CelestialMechanics.Physics.csproj
src/CelestialMechanics.Renderer/: AccretionDiskRenderer.cs  BackgroundRenderer.cs  Camera.cs  CelestialMechanics.Renderer.csproj  GLRenderer.cs  GridRenderer.cs  InstancedSphereRenderer.cs  LineRenderer.cs  ProceduralAlbedoAtlas.cs  ReferenceFrameManager.cs  RelativisticRenderer.cs  RenderSettings.cs  RenderState.cs  ShaderProgram.cs
src/CelestialMechanics.Simulation/: CelestialMechanics.Simulation.csproj  EventBus.cs  ISelectionContext.cs  MeasurementTools.cs  OrbitCalculator.cs  OrbitData.cs  PhysicsBenchmark.cs  SimulationClock.cs  SimulationEngine.cs
tests/CelestialMechanics.AppCore.Tests/: CelestialMechanics.AppCore.Tests.csproj  DeterminismTests.cs  SceneGraphTests.cs  SerializationTests.cs  SnapshotTests.cs
tests/CelestialMechanics.Math.Tests/: CelestialMechanics.Math.Tests.csproj  Vec3dTests.cs
tests/CelestialMechanics.Physics.Tests/: AccretionDiskTests.cs  AdaptiveTimeStepTests.cs  AstrophysicsUpgradeTests.cs  BarnesHutAccuracyTests.cs  BarnesHutTests.cs  CelestialMechanics.Physics.Tests.csproj  CollisionTests.cs  GravitationalWaveTests.cs  GravityTests.cs  IntegratorTests.cs  MomentumConservationTests.cs  PostNewtonianTests.cs  RadiusCalculationTests.cs  SIMDParityTests.cs  SoAStabilityTests.cs  TwoBodyOrbitTests.cs
tests/CelestialMechanics.Simulation.Tests/: CatastrophicPhysicsTests.cs  CelestialMechanics.Simulation.Tests.csproj  EventAdvisorTests.cs  EventDetectorTests.cs  OrbitClassificationTests.cs  PlacementWorkflowTests.cs  SimulationFrameworkTests.cs  StabilityClassifierTests.cs
(+215 files in other folders)
